src/css/Car.module.css
 .car {
  max-width: 227px;
  width: 100%;
  height: 340px;
  overflow: hidden;
  box-shadow: 0 0 5px #ccc;
  padding: 15px;
  margin: 15px;
  cursor: pointer;
}

.car:hover {
  box-shadow: 0 0 21px rgba(33,33,33,.2); 
}

.car img{
  width: 100%;
  height: 100%;
  max-height: 162px;
  display: block;
  object-fit: cover;
}

.car .boxDetails{
  max-width: 500px;
  width: 100%;
  margin: 20px;
  margin: 15px 0;
}
.boxDetails h2{
  color: darkblue;
  font-size: 1.05rem;
}

.boxDetails p{
  line-height: 1.5;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
  overflow: hidden;
  height: 50px;
}
.boxDetails h3{
  
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 0.7rem;
  }
  .car .boxDetails h4{
    color: crimson;
    font-size: 1rem;
  }

.car .boxDetails button{
  width: 100%;
  border: none;
  outline: none;
  background: #333;
  color: white;
  text-align: center;
  padding: 10px 0;
  margin: 10px 0;
  cursor: pointer;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.car .boxDetails button:hover{
  background: #afafaf;
  color: #333;
}

@media (max-width: 500px){
  .boxDetails{
    padding: 0;
  }
  .boxDetails img{
    width: 40px;
    height: 35px;
  }
  .details .img-container{
    height: 350px;
  }
}

